k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
spec:
  type: ClusterIP
  selector:
    app: url-shortener
  ports:
    - port: 8000
      targetPort: 8000
